# stack-underflow-TPConsulting

./: .gitignore  Makefile  README.md  TPConsulting.sln
backend/dot-net/: Makefile  Program.cs  README.md  backend.csproj  postman-collection.json
backend/go-gin-sqlx/: Makefile  README.md  env.example  go.mod  go.sum  postman-collection.json  scheme.sql  sonar-project.properties  task_list
backend/java-springbot/: Makefile  README.md  pom.xml
backend/laravel/: .env.example  Makefile  README.md  composer.json  postman-collection.json
backend/node-express/: .env.example  Makefile  README.md  package.json  postman-collection.json
backend/python-fastapi/: .env.example  Makefile  README.md  main.py  postman-collection.json  requirements.txt
backend/rust/: .env.example  Cargo.toml  Makefile  README.md  postman-collection.json
backend/rust/src/: main.rs
backend/rust/src/handlers/: mod.rs
backend/rust/src/models/: mod.rs
backend/rust/src/repositories/: mod.rs
backend/rust/src/services/: mod.rs
frontend with datastore/stack-underflow/: package-lock.json  package.json  vite.config.ts
frontend/Stack-Underflow_reactNativeMobile/: App.tsx  Makefile  package.json
frontend/StackUnderflowMobile/: README.md  app.json  package-lock.json  package.json
frontend/stack-underflow/: README.md  package-lock.json  package.json
frontend/stack-underflow-nextjs/: .env.example  Makefile  README.md  package.json
frontend/stack-underflow-nuxt/: .env.example  Makefile  nuxt.config.ts  package.json
frontend/stack-underflow_angular/: Makefile  README.md  angular.json  (+2 more)
(+669 files in other folders)
