[package]
name = "stackunderflow-api"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-async-std-runtimes", "postgres", "uuid", "chrono"] }
uuid = { version = "1.4", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.0"
bcrypt = "0.15"
dotenv = "0.15"
env_logger = "0.10"
thiserror = "1.0"

[dev-dependencies]
}

[profile.release]
lto = true
opt-level = 3
